removed bootstrap wysiwyg

--- a/app/views/shared/_includedJs.html.erb
+++ b/app/views/shared/_includedJs.html.erb
@@ -31,7 +31,7 @@
 <!-- application script for Charisma demo -->
 <%= javascript_include_tag 'charisma' %>
 
-<%= javascript_include_tag 'bootstrap-wysiwyg' %>
+<!-- <%= javascript_include_tag 'bootstrap-wysiwyg' %> -->
 
 <%= javascript_include_tag 'general' %>
 
