Added NYT and Google geocode APIs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,6 @@
   <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
   <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet' />
 
-
-
   <style type="text/css">
       html,body,#map {
           width: 100%;
@@ -25,6 +23,11 @@
 
       #editor {overflow:scroll; max-height:300px}
   </style>
+
+  <script>
+      var selection = "test";
+      var map = "";
+  </script>
 
 
   <%= yield :head %>
