--- a/app/views/shared/_includedJs.html.erb
+++ b/app/views/shared/_includedJs.html.erb
@@ -33,6 +33,9 @@
 
 <!-- <%= javascript_include_tag 'bootstrap-wysiwyg' %> -->
 
+<!-- Load jQuery.selection plugin-->
+<%= javascript_include_tag 'jquery.selection' %>
+
 <%= javascript_include_tag 'general' %>
 
 <%= javascript_include_tag 'map_settings' %>
