Created time slider

--- a/app/views/shared/_includedCss.html.erb
+++ b/app/views/shared/_includedCss.html.erb
@@ -14,3 +14,4 @@
 <%= stylesheet_link_tag 'jquery.iphone.toggle' %>
 <%= stylesheet_link_tag 'uploadify' %>
 <%= stylesheet_link_tag 'animate.min' %>
+<%= stylesheet_link_tag 'jquery-ui' %>
