--- a/app/views/shared/_includedMapJs.js.erb
+++ b/app/views/shared/_includedMapJs.js.erb
@@ -1,5 +1,6 @@
 var selection = "test";
 var map = "";
+var sliderControl = null;
 
 var new_marker_icon = "<%= j ActionController::Base.helpers.asset_path('assets/marker-icon-red.png') %>";
 
