--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Map Context - Al-Jazeera</title>
+  <title>Map Cake - Al-Jazeera</title>
 
   <%= render 'shared/includedCss' %>
 
