--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,8 +9,8 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/"> <%= image_tag 'aj_logo.png', class: 'hidden-xs' %>
-      <span>Map Context</span></a>
+    <a class="navbar-brand" href="/"> <%= image_tag 'logo-only.png' %>
+      <span>&nbsp;Map Cake</span></a>
 
   </div>
 </div>
@@ -33,12 +33,12 @@
       <div class="box-inner">
         <div class="box-header well" data-original-title="">
           <h2>
-            <i class="glyphicon glyphicon-map-marker"></i> Process data
+            <i class="glyphicon glyphicon-cog"></i> Process data
           </h2>
         </div>
 
         <div class="box-content">
-          <span id="selectedtext" style="display: none">
+          <div id="selectedtext" style="display: none">
             You selected: <span id="selectedtext_value"></span><br><br>
             <div class="radio">
               <label>
@@ -51,11 +51,12 @@
             <input type="radio" id="choice_tag" name="choice" value="tag" checked>Tag it (get related stories)<br><br>
               </label>
             </div>
-            <a class="btn btn-success" id="selected_text_confirm" href="#">Map it</a> <span class="processNotification" style="display:none">Getting related stories from the New York Times...</span>
-          </span>
-          <span id="default_description">
+            <a class="btn btn-success" id="selected_text_confirm" href="#">Map it</a>
+
+          </div>
+          <div id="default_description">
             Select a word (or an expression in your text) to implemented it on the map.
-          </span>
+          </div>
         </div>
 
         <input type="hidden" id="selection" value=""/>
@@ -66,7 +67,7 @@
       <div class="box-inner">
         <div class="box-header well" data-original-title="">
           <h2>
-            <i class="glyphicon glyphicon-map-marker"></i> Text Editor
+            <i class="glyphicon glyphicon-pencil"></i> Text Editor
           </h2>
         </div>
 
@@ -78,20 +79,21 @@
             </div>
             <div class="form-group">
               <label for="texteditor">Body:</label>
-              <textarea class="form-control" rows="20" id="texteditor">
-                Demonstrators have forced the closure a shoppingsj mall near Ferguson in the US state of Missouri, at the start of the holiday shopping season as protests over the killing of an unarmed black teen by a white police officer target some retailers around the country.
+              <textarea class="form-control" rows="20" id="texteditor">Demonstrators have forced the closure a shoppingsj mall near Ferguson in the US state of Missouri, at the start of the holiday shopping season as protests over the killing of an unarmed black teen by a white police officer target some retailers around the country.
 
-                After a quiet Thanksgiving Day, protesters were out in force on Friday to vent their anger at Monday's decision by a grand jury not to indict Officer Darren Wilson in the August 9 shooting death of 18-year-old Michael Brown in the St Louis suburb.
+After a quiet Thanksgiving Day, protesters were out in force on Friday to vent their anger at Monday's decision by a grand jury not to indict Officer Darren Wilson in the August 9 shooting death of 18-year-old Michael Brown in the St Louis suburb.
 
-                [...]
+Similar protests were staged in other cities, including New York, Chicago, Seattle and San Francisco, Pittsburg, and Oakland in California, on Black Friday, when many retailers offer deep discounts and shoppers traditionally turn out in droves.
 
-                Similar protests were staged in other cities, including New York, Chicago, Seattle and San Francisco, Pittsburg, and Oakland in California, on Black Friday, when many retailers offer deep discounts and shoppers traditionally turn out in droves.
-
-                [...]
-
-                The shooting of Michael Brown took place at 2969 Canfield Drive, Ferguson.
+The shooting of Michael Brown took place at 2969 Canfield Drive, Ferguson.
               </textarea>
             </div>
+
+            <div class="form-actions">
+              <a href="/user/managerecords" class="btn btn-success">Publish the story</a>
+              <a href="/user/managerecords" class="btn">Cancel</a>
+            </div>
+
           </form>
           <!-- <div id="editor"></div> -->
         </div>
@@ -117,6 +119,10 @@
 
           <h4>Tags</h4>
           <div id="tag_list">
+          </div>
+
+          <div id="processNotification" style="display:none;">
+            <hr><i>Getting related stories from the New York Times...</i>
           </div>
         </div>
       </div>
