--- a/app/views/shared/_includedMapJs.js.erb
+++ b/app/views/shared/_includedMapJs.js.erb
@@ -2,6 +2,9 @@ var selection = "test";
 var map = "";
 var sliderControl = null;
 
+var layerGroup;
+
+
 var new_marker_icon = "<%= j ActionController::Base.helpers.asset_path('assets/marker-icon-red.png') %>";
 
 var newIcon = L.icon ({
