Changed instruction message

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -62,7 +62,7 @@
 
           </div>
           <div id="default_description">
-            Select a word (or an expression in your text) to implemented it on the map.
+            Highlight a word (or an expression in your text) with your mouse to implement it on the map. <strong>Works on Chrome only!</strong>
           </div>
         </div>
 
